--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Jun Fastpages
-description: An APCSA necessity
+description: An APCSA masterclass
 github_username: peacekeeper6
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "fastpages"
