--- a/_config.yml
+++ b/_config.yml
@@ -39,8 +39,9 @@ baseurl: "/fastpages" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
+  - { platform: github, user_url: "https://github.com/peacekeeper6/" }
 #     twitter: fastdotai
-    github: peacekeeper6
+    # github: peacekeeper6
 
 # Set this to true to get LaTeX math equation support
 use_math: 
