--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Jun's Fastpages
+title: fastpages
 description: An APCSA masterclass
-github_username: peacekeeper6
+github_username: willcyber
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "fastpages"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
-url: "https://peacekeeper6.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://willcyber.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 ###########################################################
 #########  Special Instructions for baseurl ###############
@@ -40,7 +40,7 @@ baseurl: "/fastpages" # the subpath of your site, e.g. "/blog".
 minima:
   # social_links:
 #     twitter: fastdotai
-    # github: peacekeeper6
+    # github: fastdotai
 
 # Set this to true to get LaTeX math equation support
 use_math: 
