--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
+title: Jun's Fastpages
 description: An APCSA masterclass
-github_username: willcyber
+github_username: peacekeeper6
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "fastpages"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
-url: "https://willcyber.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://peacekeeper6.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 ###########################################################
 #########  Special Instructions for baseurl ###############
