--- a/_config.yml
+++ b/_config.yml
@@ -38,9 +38,10 @@ baseurl: "/fastpages" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
-  # social_links:
-#     twitter: fastdotai
-    # github: fastdotai
+  social_links:
+    - { platform: github, user_url: “https://github.com/nighthawkcoders”}
+    - { platform: twitter, user_url: “https://twitter.com/NighthawkCoding”}
+    - { platform: youtube, user_url: “https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q”}
 
 # Set this to true to get LaTeX math equation support
 use_math: 
