--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,9 @@ baseurl: "/fastpages" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
-  skin: dark
+    social_links:
+      - { platform: github, user_url: "https://github.com/exampleUser" }
+      - { platform: twitter, user_url: "https://twitter.com/exampleUser" }
   # social_links:
   #   - { platform: github, user_url: “https://github.com/nighthawkcoders”}
   #   - { platform: twitter, user_url: “https://twitter.com/NighthawkCoding”}
